<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="StReadIO" Id="{4de34009-1d4b-4760-a73d-a3fac961ce7f}">
    <Declaration><![CDATA[TYPE StReadIO :
STRUCT
	{attribute addProperty Name "<#Actual IO Staus #>"}
	st_ReadIO : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>