<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <GVL Name="IO" Id="{c0227015-dc69-4708-8625-cedcbecd4015}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	g_ReadIO AT %I* : BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>